<resources>
    <string name="facebook_app_id" translatable="false">1780690795742513</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1780690795742513</string>
    <string name="facebook_client_token" translatable="false">66bcc28635ac484b60792629ed1bed60</string>
    <string name="app_name">Smart Lunch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="card">Card</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="zh">Chinese</string>
    <string name="ko">Korean</string>
    <string name="fr">French</string>
    <string name="th">Thai</string>
    <string name="en_code" translatable="false">en</string>
    <string name="vi_code" translatable="false">vi</string>
    <string name="zh_code" translatable="false">zh</string>
    <string name="ko_code" translatable="false">ko</string>
    <string name="fr_code" translatable="false">fr</string>
    <string name="th_code" translatable="false">th</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="onboarding_greeting1">Hello! We are\nSmart Lunch</string>
    <string name="onboarding_greeting2">Easy and convenient with\nSmart Lunch</string>
    <string name="onboarding_greeting3">Diverse choices with\nSmart Lunch</string>
    <string name="details_onboarding_fragment1">Explore and order delicious food anytime, anywhere</string>
    <string name="details_onboarding_fragment2">Choose food, place an order, and get it delivered to your doorstep</string>
    <string name="details_onbroading_fragment3">Discover a variety of options from popular restaurants</string>
    <string name="skip">Skip</string>
    <string name="continute">Continue</string>
    <string name="btn_continue">Continue</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">Or</string>
    <string name="label_sign_up">Don\'t have an account? Sign up now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="notEmpty">Not empty</string>
    <string name="login_title">Log in</string>
    <string name="email_title">Please enter your email</string>
    <string name="forget_password">Forgot password</string>
    <string name="lable_sign_up">Don\'t have an account? <font color="#0085FF"><b>Sign up</b></font></string>
    <string name="lable_sign_in">Already have an account? <font color="#0085FF"><b>Log in</b></font></string>
    <string name="username_not_empty">This field cannot be empty.</string>
    <string name="password_not_empty">This field cannot be empty.</string>
    <string name="email_not_empty">This field cannot be empty.</string>
    <string name="display_name_not_empty">This field cannot be empty.</string>
    <string name="confirm_password_not_empty">This field cannot be empty.</string>
    <string name="login_fail">Username or password is incorrect</string>
    <string name="login_success">Login successful</string>
    <string name="display_name">Display name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_location">My location</string>
    <string name="introduce">Introduce</string>
    <string name="logout">Logout</string>
    <string name="notify">Notifications</string>
    <string name="dark_mode">Dark mode</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="details_onbroading_fragment1">Welcome to our app! We will provide the best service for you</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin_account">Sign in account</string>
    <string name="signup_account">Sign up account</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="signup_success">Signup successful</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="last_name_not_empty">Last name cannot be empty</string>
    <string name="phone_not_empty">Phone number cannot be empty</string>
    <string name="address_not_empty">Address cannot be empty</string>
    <string name="otp_title">Enter OTP</string>
    <string name="email_verification_hint">Enter your account\'s email address to receive the verification code</string>
    <string name="otp_message_guide">"The verification code has been sent to your email"</string>
    <string name="otp_message_question">Did not receive the code?</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="dismiss">Dismiss</string>
    <string name="reset_password_success_title">Password Reset Successful</string>
    <string name="reset_password_success_message">Your new password has been updated. Press continue to log in.</string>
    <string name="change_password_success_message">Your new password has been updated. Press continue to exit.</string>
    <string name="verify_otp_send_button_text">Send</string>
    <string name="verify_otp_resend_button_text">Resend code</string>
    <string name="verify_otp_code_entry_hint">Enter your OTP here</string>
    <string name="verify_otp_success_title">Registration Successful</string>
    <string name="verify_otp_success_message">Your account has been registered successfully.</string>
    <string name="verify_otp_reset_password_success_title">Password Reset Successful</string>
    <string name="verify_otp_reset_password_success_message">Your new password has been updated.</string>
    <string name="reset_pass_title">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="validatePhone">Invalid format</string>
    <string name="validateEmail">Invalid format</string>
    <string name="validatePassword">Invalid password</string>
    <string name="order">Order</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="pay">Pay</string>
    <string name="category">Category</string>
    <string name="note_default">No note</string>
    <string name="min_cost">0 VND</string>
    <string name="payment_id">No value</string>
    <string name="payment_fail">Fail</string>
    <string name="error_500">Server error</string>
    <string name="http200">OK</string>
    <string name="http400">Client-side error</string>
    <string name="http401">Unauthorized</string>
    <string name="http403">Forbidden</string>
    <string name="http404">Not found</string>
    <string name="http500">Server error during processing</string>
    <string name="faild">Lỗi</string>
    <string name="end_call_offer">Cuộc gọi kết thúc, đối phương không trả lời</string>
    <string name="end_call">Cuộc gọi kết thúc</string>
    <string name="call_faild">Cuộc gọi xảy ra lỗi</string>
    <string name="refuse">Đối phương từ chối bạn</string>
    <string name="access_camera">Bạn phải cho phép quyền truy cập máy ảnh</string>
    <string name="access_gallery">Bạn phải cho phép quyền truy cập thư viện</string>
    <string name="unable_gallery">Không thể lấy ảnh từ thư viện</string>
    <string name="ok">Đi</string>
    <string name="to_setting">Tới cài đặt</string>
    <string name="want_to_call">muốn gọi cho bạn</string>
    <string name="room_not_found">Không tìm thấy phòng</string>
    <string name="chat_section">Đoạn chat</string>
    <string name="you">Bạn</string>
    <string name="calling">Đang gọi</string>
    <string name="join">Tham gia</string>
    <string name="voice_call">Cuộc gọi thoại</string>
    <string name="minute">phút</string>
    <string name="taking_photo_faild">Chụp ảnh thất bại</string>
    <string name="send_message_faild">Gửi tin nhắn không thành công</string>
    <string name="please_search">Hãy tìm kiếm</string>
    <string name="results_for">Xem kết quả cho</string>
    <string name="evaluate">Đánh giá</string>
    <string name="coupon_detail">Chi tiết mã giảm giá</string>
    <string name="minimum">Tối thiểu</string>
    <string name="promotion">Khuyến mãi</string>
    <string name="feature_development">Chức năng đang được phát triển</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="clear_cart_title">Clear Cart</string>
    <string name="clear_cart_message">Are you sure you want to clear your cart?</string>
    <string name="delete_product_message">Do you want to remove this product from the cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="get_cart_empty">No data available for getOneCartById</string>
    <string name="get_cart_error">Error in getOneCartById</string>
    <string name="filter">Filter</string>
    <string name="increase">Tăng</string>
    <string name="decrease">Giảm</string>
    <string name="about_me">Về chúng tôi</string>
    <string name="introduct">Trong bối cảnh trên, chúng em quyết định chọn đề tài Ứng dụng đặt đồ ăn Smart Lunch để tìm hiểu sâu hơn về cách áp dụng công nghệ thông tin vào ngành dịch vụ ẩm thực, cung cấp giải pháp thúc đẩy sự tiện lợi cho khách hàng và sự hiệu quả cho quản lý nhà hàng</string>
    <string name="okok1">Thứ 2 - thứ 6</string>
    <string name="okok2">Thứ bảy - chủ nhật</string>
    <string name="commit_payment">Proceed to Payment</string>
    <string name="loading"> Loading...</string>
    <string name="search_hint"> What are you craving for?</string>
    <string name="popular_text">Popular</string>
    <string name="see_all_text">See all</string>
    <string name="high_rating_text">High Rating</string>
    <string name="recommendation_text">Today\'s Recommendation</string>
    <string name="see_detail_text">See Detail</string>
    <string name="default_category">More</string>
    <string name="history">History</string>
    <string name="order_success">Order placed successfully</string>
    <string name="notification_time">20/10/2023 | 20:00</string>
    <string name="notification_content">You have canceled an order at Hut. We apologize for your inconvenience. We will try to improve our service next time 🥲</string>
    <string name="refund_failed">Refund failed</string>
    <string name="payment_status">%1$s</string>
    <string name="payment_paid">Payment paid</string>
    <string name="payment_not_paid">Payment not paid</string>
    <string name="cancel_order_success">Cancel order success</string>
    <string name="order_successful">Order_successful</string>
    <string name="cancel_order_successful">Cancel order success</string>
    <string name="cancel_order_failed">Cancel order success failed</string>
    <string name="retry">Retry</string>
    <string name="title_status">Order status</string>
    <string name="message_status">Status message</string>
    <string name="follow_order">Follow order </string>
    <string name="restaurant_info">SmartLunch - Trinh Van Bo, Nam Tu Liem</string>
    <string name="full_name">Full name</string>
    <string name="address_detail">Address details</string>
</resources>