<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include android:id="@+id/layout_header"
                layout="@layout/toolbar_header"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/PolyInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/PolyInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/layout_spinner_tinh"
                layout="@layout/layout_spinner"/>

            <include
                android:id="@+id/layout_spinner_huyen"
                layout="@layout/layout_spinner"/>

            <include
                android:id="@+id/layout_spinner_xa"
                layout="@layout/layout_spinner"/>


            <EditText
                android:id="@+id/edt_note"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:hint="@string/address_detail"
                android:paddingTop="15dp"
                android:paddingStart="15dp"
                android:textColorHint="#D1D8DD"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:maxLines="10"
                android:background="@drawable/khung"
                />

            <fragment
                android:id="@+id/map_view_payment"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginTop="20dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:text="Xác nhận"/>
        </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>